<resources>
    <string name="app_name">Siren</string>

    <string name="recommended">Rekomendasi</string>
    <string name="favorite">Favorite(s)</string>

    <string name="hello">Hai, </string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="profile">Profil</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="user">" User"</string>
    <string name="txt_intro">Mencari informasi dan berbagai tips-tips menarik tentang mendidik anak kini jauh lebih mudah.</string>
    <string name="txt_input">Masukkan Data Anda</string>
    <string name="txt_dont_have_account">Belum punya akun?</string>
    <string name="txt_login_google">Atau login dengan</string>

    <string name="email_pattern_error">Email is not valid.</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="password_length_error">Min. length password is 6 characters.</string>
    <string name="txt_have_account">Punya kun?</string>
    <string name="txt_register_google">Atau daftar dengan</string>
</resources>